Composer install livewire/flux + configure and fix dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,10 @@
 /* @import "tailwindcss/preflight.css" layer(base); */
 @import "tailwindcss/utilities.css" layer(utilities);
 
+@import '../../vendor/livewire/flux/dist/flux.css';
+
+@custom-variant dark (&:where(.dark, .dark *));
+
 /* Classes excluded to avoid conflicts with CDS */
 @source not inline("flex-{1,2,3,4,5,6,7,8,9,10,11,12}");
 @source not inline("container");
@@ -14,5 +18,5 @@
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans: 'freight-sans-pro', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
